MilestoneRFAFullSandBox/src/objects/Project_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <description>受付チャネルを定義する。</description>
        <inlineHelpText>受付チャネルを定義する。</inlineHelpText>
        <label>チャネル</label>
        <picklist>
            <picklistValues>
                <fullName>電話</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>メール</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>訪問</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Issueを管理/受付する担当者を定義する。</description>
        <inlineHelpText>Issueを管理/受付する担当者を定義する。</inlineHelpText>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <description>実働日数 = 解決日 - 依頼日</description>
        <formula>SettlementDate__c  -  RequestDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>自動計算</inlineHelpText>
        <label>実働日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IssueName__c</fullName>
        <description>Issue名を英語で定義する。</description>
        <inlineHelpText>Issue名を英語で定義する。</inlineHelpText>
        <label>IssueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueTitle__c</fullName>
        <description>Issue名を定義する。</description>
        <inlineHelpText>Issue名を定義する。</inlineHelpText>
        <label>Issue名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Contents__c</fullName>
        <description>Issueの詳細内容を定義する。</description>
        <inlineHelpText>Issueの詳細内容を定義する。</inlineHelpText>
        <label>Issue内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>依頼者を定義する。</description>
        <inlineHelpText>依頼者を定義する。</inlineHelpText>
        <label>依頼者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kind__c</fullName>
        <description>Issueの種別を定義する。</description>
        <inlineHelpText>Issueの種別を定義する。</inlineHelpText>
        <label>種別</label>
        <picklist>
            <picklistValues>
                <fullName>ログイン</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ユーザ登録</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>承認者修正</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>システム操作_マニュアル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ブラウザ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>デリゲーション</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>押印申請</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>システム変更</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>システムバグ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>問題の対応優先順を定義する。</description>
        <inlineHelpText>問題の対応優先順を定義する。</inlineHelpText>
        <label>重要度</label>
        <picklist>
            <picklistValues>
                <fullName>緊急</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>プロジェクト名</label>
        <referenceTo>ProjectManagement__c</referenceTo>
        <relationshipLabel>Project Issue List</relationshipLabel>
        <relationshipName>Project_Issue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Issue_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>続きだったり関連するIssue　No</description>
        <label>関連Issue No</label>
        <referenceTo>Project_Issue__c</referenceTo>
        <relationshipLabel>Project Issues</relationshipLabel>
        <relationshipName>Project_Issues_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Issueを依頼した日付を定義する。</description>
        <inlineHelpText>Issueを依頼した日付を定義する。</inlineHelpText>
        <label>依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Function__c</fullName>
        <formula>Issue_requester__r.L2_Function_E__c</formula>
        <label>Requester Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementContents__c</fullName>
        <description>Issuel解決した内容を定義する。</description>
        <inlineHelpText>Issuel解決した内容を定義する。</inlineHelpText>
        <label>解決内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SettlementDate__c</fullName>
        <description>解決済みの日付を定義する。</description>
        <inlineHelpText>解決済みの日付を定義する。</inlineHelpText>
        <label>解決日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SettlementUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Issue解決担当者を定義する。</description>
        <inlineHelpText>Issue解決担当者を定義する。</inlineHelpText>
        <label>解決者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Issue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Issueでの進捗状況を定義する。</description>
        <inlineHelpText>Issueでの進捗状況を定義する。</inlineHelpText>
        <label>状態</label>
        <picklist>
            <picklistValues>
                <fullName>受付</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対応中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>解決済</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workload_time__c</fullName>
        <defaultValue>00</defaultValue>
        <description>実働時間を分単位で入力する</description>
        <inlineHelpText>input:00, 15, 30, 45, 60, 75, 90, ...
目安時間（min）・password reset　10　・マネージャ修正　30</inlineHelpText>
        <label>実働時間(単位:分)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>お問合せ一覧</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RequestDate__c</columns>
        <columns>SettlementDate__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Kind__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>00すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Email</fullName>
        <columns>RequestDate__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Kind__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>メール</value>
        </filters>
        <label>01メール対応</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Tel</fullName>
        <columns>RequestDate__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Kind__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>電話</value>
        </filters>
        <label>02電話対応</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View1</fullName>
        <columns>RequestDate__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Kind__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RequestDate__c</field>
            <operation>equals</operation>
            <value>4/22/2014</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>メール</value>
        </filters>
        <label>04今日のメール受付</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View3</fullName>
        <columns>RequestDate__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Kind__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RequestDate__c</field>
            <operation>equals</operation>
            <value>4/24/2014</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>電話</value>
        </filters>
        <label>05今日の電話受付</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>change_browser</fullName>
        <columns>NAME</columns>
        <columns>RequestDate__c</columns>
        <columns>SettlementDate__c</columns>
        <columns>Channel__c</columns>
        <columns>Kind__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>Workload_time__c</columns>
        <columns>SettlementContents__c</columns>
        <columns>ContactPoint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IssueTitle__c</field>
            <operation>contains</operation>
            <value>メール通知</value>
        </filters>
        <label>メール通知</label>
        <language>ja</language>
        <sharedTo>
            <role>RFA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>strange</fullName>
        <columns>RequestDate__c</columns>
        <columns>SettlementDate__c</columns>
        <columns>NAME</columns>
        <columns>ContactPoint__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Kind__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>受付,対応中</value>
        </filters>
        <filters>
            <field>SettlementDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>06対応中_未解決で解決日あり</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>visited</fullName>
        <columns>RequestDate__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Kind__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>訪問</value>
        </filters>
        <label>03訪問対応</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>working_an_it</fullName>
        <columns>RequestDate__c</columns>
        <columns>NAME</columns>
        <columns>ContactPoint__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Workload_time__c</columns>
        <columns>Kind__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>IssueTitle__c</columns>
        <columns>IssueName__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>解決済</value>
        </filters>
        <label>06対応中_未解決</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>working_an_it2</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>ContactPoint__c</columns>
        <columns>Issue_Contents__c</columns>
        <columns>Issue_requester__c</columns>
        <columns>Channel__c</columns>
        <columns>SettlementDate__c</columns>
        <columns>Kind__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>解決済</value>
        </filters>
        <filters>
            <field>Kind__c</field>
            <operation>equals</operation>
            <value>ユーザ登録</value>
        </filters>
        <label>07ユーザ登録確認中</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>IssueNo-{0000000}</displayFormat>
        <label>お問合せ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>